--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.html
@@ -11,13 +11,12 @@
     </div>
   </div>
   <div class="step-detail">
-    <app-first-step-service-creation *ngIf="userService && userService.step === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-first-step-service-creation>
-    <app-second-step-creation *ngIf="userService && userService.step === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-second-step-creation>
-
-    <app-third-step-creation *ngIf="userService && userService.step === 3" [userService]="userService"></app-third-step-creation>
-    <!--  <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div>6</div> -->
+    <!-- <app-first-step-service-creation *ngIf="userService && userService.step === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-first-step-service-creation> -->
+    <!-- <app-second-step-creation *ngIf="userService && userService.step === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-second-step-creation> -->
+    <!-- <app-third-step-creation *ngIf="userService && userService.step === 3" [userService]="userService"></app-third-step-creation> -->
+    <!-- <app-fourth-step-creation *ngIf="userService " [userService]="userService"></app-fourth-step-creation> -->
+    <app-fifth-step-creation *ngIf="userService" [userService]="userService"></app-fifth-step-creation>
+    <!-- <div>5</div> -->
+    <!-- <div>6</div>  -->
   </div>
 </div>
