--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -189,7 +189,14 @@
       </section>
 
       <app-questions></app-questions>
+      <app-about-offer></app-about-offer>
     </div>
-    <div class="choose-packet"></div>
+    <div class="choose-packet">
+      <div class="runing-block"></div>
+    </div>
+    <div class="sliders-block">
+      Занимаюсь дизайном с 2010 года.  Мои профессиональные навыки создание дизайна сайтов, лоотипов, мобильных приложений и прочего. Занимаюсь дизайном с 2010 года.  Мои профессиональные навыки создание дизайна сайтов, лоотипов, мобильных приложений и прочего. Занимаюсь дизайном с 2010 года.  Мои профессиональные навыки создание дизайна сайтов, лоотипов, мобильных приложений и прочего. Занимаюсь дизайном с 2010 года.  Мои профессиональные навыки создание дизайна сайтов, лоотипов, мобильных приложений и прочего.
+
+    </div>
   </div>
 </div>
