--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.scss
@@ -1,9 +1,9 @@
-h3 {
+  h3 {
   margin-bottom: 19px;
   margin-top: 0;
 }
 
-form {
+form ::ng-deep  {
   display: flex;
   flex-direction: column;
   width: 66%;
@@ -29,182 +29,194 @@ form {
     padding: 20px 100px 20px 24px;
     margin: 0;
   }
-  .faq-item {
-    border: 1px solid #dce0e6;
-    box-sizing: border-box;
-    border-radius: 0px 0px 4px 4px;
-    background: #f4f7fc;
-    position: relative;
-
-    &:not(:first-of-type) {
-      margin-top: 30px;
-    }
-    &.hiddenItem {
-      .item-options {
-        display: block;
-        button {
-          border: none;
-          background: none;
-          margin-right: 22px;
-          color: #C2CFE0;
-          padding: 0;
-          cursor: pointer;
-          &>i {
-            font-size: 17px;
-          }
-          &.change:hover {
-            color: #3C7EEA;
-          }
-          &.delete:hover {
-            color: #FF647C;
-          }
-        }
-      }
-      .question-title {
-        height: 0;
-        padding: 0;
-        margin: 0;
-      }
-      .item-unswer {
-        height: 0;
-        overflow: hidden;
+  .breef-item {
+    background: #F4F7FC;
+    border-radius: 3px 3px 0px 0px;
+    padding: 9px 9px 24px 9px;
+    .title {
+      border-radius: 4px;
+      height: 100px;
+      padding: 17px 10px;
+      border: 1px solid #dce0e6;
+      background-color: #ffffff;
+      margin-bottom: 25px;
+      textarea {
+        width: 100%;
+        height: 100%;
+        resize: none;
+        outline: none;
+        font-family: Source Sans Pro, sans-serif;
+        font-size: 16px;
+        line-height: 20px;
+        color: #33596E;
+        border: none;
       }
     }
-    .item-options {
-      position: absolute;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      display: none;
+    .options {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
     }
-  }
-  .question-title {
-    padding: 24px 24px 18px;
-    background: #fff;
-    margin-bottom: 5px;
-    overflow: hidden;
-    input {
-      width: 100%;
+    label {
       font-family: Source Sans Pro, sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
       line-height: 20px;
-      background: #fff;
-      border: none;
-      outline: none;
-
-      &::placeholder {
-        /* Chrome, Firefox, Opera, Safari 10.1+ */
-        color: #33596e;
-        opacity: 0.5;
-      }
-
-      &:-ms-input-placeholder {
-        /* Internet Explorer 10-11 */
-        color: #33596e;
-        opacity: 0.5;
-      }
-
-      &::-ms-input-placeholder {
-        /* Microsoft Edge */
-        color: #33596e;
-        opacity: 0.5;
+      text-align: center;
+      color: #707683;
+      &:first-of-type {
+        margin-right: 14px;
       }
     }
+    mat-form-field {
+      & > div {
+        border: none;
+        padding: 0;
+      }
+      .mat-form-field-infix {
+
+      }
+    }
+    mat-form-field{
+      &:not(.example-chip-list ) {
+        .mat-form-field-infix {
+          border: none;
+          padding: 0;
+        }
+      }
+      .mat-form-field-infix {
+        border: none;
+      }
+    }
+    .mat-form-field-infix {
+      border-top: none;
+    }
+//   ------------- selects ----------------// 
+
+.service-selects {
+  .mat-form-field-infix {
+    border-top: none;
+  }
+
+  .mat-form-field-appearance-outline .mat-form-field-flex {
+    padding-left: 16px;
   }
 }
-.options {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 13px;
-  button {
-    padding: 10px 16px;
-    font-size: 14px;
-    line-height: 18px;
-  }
-  button:first-of-type {
-    margin-right: 25px;
-  }
-}
-.add-item {
-  margin: 13px 0 30px;
 
-  & > * {
-    font-size: 16px;
-    line-height: 20px;
-    font-style: normal;
-    text-transform: none;
-  }
+.service-selects {
+  .mat-form-field {
+    width: 170px;
+    margin-right: 23px;
+    &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
+      transform: none;
+    }
 
-  button {
-    display: flex;
-    align-items: center;
-  }
-  i {
-    margin-right: 13px;
-    font-size: 18px;
-  }
-}
-
-form::ng-deep {
-  // * {
-  //   font-family: "Source Sans Pro", sans-serif;
-  // }
-
-  ngb-popover-window {
-    &.popover {
-      background: #ffffff;
-      box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
-      border-radius: 8px;
-      padding: 18px 23px 19px 28px;
-      left: 14px !important;
-      top: -5px !important;
-      z-index: 2;
-      max-width: 323px;
+    .mat-select-arrow {
+      border: none;
+      width: 24px;
+      height: 24px;
+      // background: #000;
+      position: relative;
 
       &:before {
         content: "";
         position: absolute;
-        left: -9px;
-        top: 8px;
-        width: 22px;
-        height: 22px;
-        background: #ffffff;
-        -webkit-transform: rotate(47deg);
-        transform: rotate(47deg);
-        box-sizing: border-box;
-        z-index: -1;
-      }
-
-      h3 {
-        font-family: "Source Sans Pro", sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 18px;
-        color: #000000;
-        margin: 0 0 12px;
-      }
-
-      .popover-body {
-        margin: 0;
-        font-family: "Source Sans Pro", sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 18px;
-        color: #707683;
+        width: 30%;
+        height: 30%;
+        border-bottom: 2px solid #000;
+        border-left: 2px solid #000;
+        transform: rotate(-45deg) translateY(50%);
       }
     }
 
-    &.popover-select {
-      top: 25px !important;
+    
+
+    // &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
+    //   // color: #f44336;
+    //   div {
+    //     // color: #f44336;
+    //   }
+    // }
+    .mat-form-field-outline:first-of-type {
+      box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+      background-color: #fff;
+      div {
+        border-color: rgba(220, 224, 230, 0.1);
+      }
     }
-    &.popover-file {
-      top: -43px !important;
+
+    .mat-form-field-outline-thick {
+      background-color: #fff;
+      div {
+        border-width: 1px;
+        color: rgba(255,255,255);
+        box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+      }
     }
+
+    .mat-form-field-infix {
+      padding: 15px 0 10px 0;
+      border-top: none;
+    }
+
+    .ng-star-inserted {
+      // font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      color: #323c47;
+
+      &.mat-error {
+        color: #f44336;
+      }
+    }
+
+    mat-select {
+      // border: 1px solid rgba(220, 224, 230, 0.1);
+      //
+      border-radius: 3px;
+      font-size: 16px;
+      line-height: 21px;
+      /* identical to box height, or 131% */
+
+      color: #323c47;
+    }
+    
   }
 }
+
+
+// -----------------------------------------
+
+mat-form-field{
+  &:not(.example-chip-list ) {
+    .mat-form-field-infix {
+      border: none;
+      padding: 0;
+    }
+  }
+  .mat-form-field-infix {
+    border: none;
+  }
+}
+
+
+  .mat-form-field-invalid .mat-input-element {
+    caret-color: #323c47;
+  }
+
+  .mat-form-field-outline:first-of-type {
+    color: #dce0e6;
+    background-color: #fff;
+
+    &+div div {
+      color: #dce0e6;
+      border-width: 1px;
+    }
+  }
+  }
+
 
 quill-editor::ng-deep {
   .ql-toolbar {
@@ -326,4 +338,5 @@ ngb-popover-window {
       color: #707683;
     }
   }
+}
 }
