--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -189,6 +189,7 @@
         font-weight: normal;
         font-size: 14px;
         line-height: 18px;
+        background-color: #fff;
       }
       &:hover {
         &:before {
@@ -536,18 +537,19 @@
 #tab1:checked ~ #positive,
 #tab2:checked ~ #negative {
   display: block;
+  width: 100%;
 }
 
 .choose-packet{
-  width: 33%;
+  width: 42%;
   position: relative;
   .runing-block{
-    width: 300px;
-    height: 300px;
-    background-color: red;
+    width: 480px;
+    height: auto;
     position: sticky;
     top: 30px;
-    margin: 30px auto 30px;
+    margin: 30px 0 30px;
+    margin-left: auto;
   }
 }
 
