--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.scss
@@ -1,9 +1,9 @@
-  h3 {
+h3 {
   margin-bottom: 19px;
   margin-top: 0;
 }
 
-form ::ng-deep  {
+form ::ng-deep {
   display: flex;
   flex-direction: column;
   width: 66%;
@@ -30,9 +30,18 @@ form ::ng-deep  {
     margin: 0;
   }
   .breef-item {
-    background: #F4F7FC;
+    background: #f4f7fc;
     border-radius: 3px 3px 0px 0px;
     padding: 9px 9px 24px 9px;
+    margin-bottom: 25px;
+    .item-count {
+      font-family: Source Sans Pro, sans-serif;
+      font-size: 14px;
+      line-height: 18px;
+      color: #323c47;
+      padding: 0;
+      margin: 0 0 12px;
+    }
     .title {
       border-radius: 4px;
       height: 100px;
@@ -48,7 +57,7 @@ form ::ng-deep  {
         font-family: Source Sans Pro, sans-serif;
         font-size: 16px;
         line-height: 20px;
-        color: #33596E;
+        color: #33596e;
         border: none;
       }
     }
@@ -56,16 +65,27 @@ form ::ng-deep  {
       display: flex;
       flex-direction: row;
       align-items: center;
+      margin-bottom: 14px;
+      span {
+        font-family: Source Sans Pro, sans-serif;
+        font-size: 16px;
+        line-height: 20px;
+        color: #707683;
+      }
     }
     label {
       font-family: Source Sans Pro, sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
-      line-height: 20px;
-      text-align: center;
+      line-height: 17px;
       color: #707683;
-      &:first-of-type {
+      // &:first-of-type {
+      //   margin-right: 14px;
+      // }
+    }
+    .options {
+      label {
         margin-right: 14px;
       }
     }
@@ -75,11 +95,10 @@ form ::ng-deep  {
         padding: 0;
       }
       .mat-form-field-infix {
-
       }
     }
-    mat-form-field{
-      &:not(.example-chip-list ) {
+    mat-form-field {
+      &:not(.example-chip-list) {
         .mat-form-field-infix {
           border: none;
           padding: 0;
@@ -92,251 +111,320 @@ form ::ng-deep  {
     .mat-form-field-infix {
       border-top: none;
     }
-//   ------------- selects ----------------// 
+    //   ------------- selects ----------------//
 
-.service-selects {
-  .mat-form-field-infix {
-    border-top: none;
-  }
+    .service-selects {
+      .mat-form-field-infix {
+        border-top: none;
+      }
 
-  .mat-form-field-appearance-outline .mat-form-field-flex {
-    padding-left: 16px;
-  }
-}
-
-.service-selects {
-  .mat-form-field {
-    width: 170px;
-    margin-right: 23px;
-    &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
-      transform: none;
-    }
-
-    .mat-select-arrow {
-      border: none;
-      width: 24px;
-      height: 24px;
-      // background: #000;
-      position: relative;
-
-      &:before {
-        content: "";
-        position: absolute;
-        width: 30%;
-        height: 30%;
-        border-bottom: 2px solid #000;
-        border-left: 2px solid #000;
-        transform: rotate(-45deg) translateY(50%);
+      .mat-form-field-appearance-outline .mat-form-field-flex {
+        padding-left: 16px;
       }
     }
 
-    
+    .service-selects {
+      .mat-form-field {
+        width: 170px;
+        margin-right: 23px;
+        &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
+          transform: none;
+        }
 
-    // &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
-    //   // color: #f44336;
-    //   div {
-    //     // color: #f44336;
-    //   }
-    // }
+        .mat-select-arrow {
+          border: none;
+          width: 24px;
+          height: 24px;
+          // background: #000;
+          position: relative;
+
+          &:before {
+            content: "";
+            position: absolute;
+            width: 30%;
+            height: 30%;
+            border-bottom: 2px solid #000;
+            border-left: 2px solid #000;
+            transform: rotate(-45deg) translateY(50%);
+          }
+        }
+        .mat-form-field-outline:first-of-type {
+          box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+          background-color: #fff;
+          div {
+            border-color: rgba(220, 224, 230, 0.1);
+          }
+        }
+        .mat-form-field-outline-thick {
+          background-color: #fff;
+          div {
+            border-width: 1px;
+            color: rgba(255, 255, 255);
+            box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+          }
+        }
+
+        .mat-form-field-infix {
+          padding: 15px 0 10px 0;
+          border-top: none;
+        }
+
+        .ng-star-inserted {
+          // font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 21px;
+          color: #323c47;
+
+          &.mat-error {
+            color: #f44336;
+          }
+        }
+
+        mat-select {
+
+          border-radius: 3px;
+          font-size: 16px;
+          line-height: 21px;
+          color: #323c47;
+        }
+      }
+    }
+
+    // -----------------------------------------
+
+    mat-form-field {
+      &:not(.example-chip-list) {
+        .mat-form-field-infix {
+          border: none;
+          padding: 0;
+        }
+      }
+      .mat-form-field-infix {
+        border: none;
+      }
+    }
+
+    .mat-form-field-invalid .mat-input-element {
+      caret-color: #323c47;
+    }
+
     .mat-form-field-outline:first-of-type {
-      box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
-      background-color: #fff;
-      div {
-        border-color: rgba(220, 224, 230, 0.1);
-      }
-    }
-
-    .mat-form-field-outline-thick {
-      background-color: #fff;
-      div {
-        border-width: 1px;
-        color: rgba(255,255,255);
-        box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
-      }
-    }
-
-    .mat-form-field-infix {
-      padding: 15px 0 10px 0;
-      border-top: none;
-    }
-
-    .ng-star-inserted {
-      // font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 21px;
-      color: #323c47;
-
-      &.mat-error {
-        color: #f44336;
-      }
-    }
-
-    mat-select {
-      // border: 1px solid rgba(220, 224, 230, 0.1);
-      //
-      border-radius: 3px;
-      font-size: 16px;
-      line-height: 21px;
-      /* identical to box height, or 131% */
-
-      color: #323c47;
-    }
-    
-  }
-}
-
-
-// -----------------------------------------
-
-mat-form-field{
-  &:not(.example-chip-list ) {
-    .mat-form-field-infix {
-      border: none;
-      padding: 0;
-    }
-  }
-  .mat-form-field-infix {
-    border: none;
-  }
-}
-
-
-  .mat-form-field-invalid .mat-input-element {
-    caret-color: #323c47;
-  }
-
-  .mat-form-field-outline:first-of-type {
-    color: #dce0e6;
-    background-color: #fff;
-
-    &+div div {
       color: #dce0e6;
-      border-width: 1px;
+      background-color: #fff;
+
+      & + div div {
+        color: #dce0e6;
+        border-width: 1px;
+      }
+    }
+    .breef-question-item {
+      height: 43px;
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px solid #DCE0E6;
+      box-sizing: border-box;
+      border-radius: 4px;
+      background: #fff;
+      input {
+        width: 100%;
+        height: 100%;
+        border: none;
+        font-family: Source Sans Pro, sans-serif;
+        font-size: 16px;
+        line-height: 20px;
+        color: #33596E;
+        outline: none;
+
+        &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+          opacity: 0.5;
+        }
+        &::-moz-placeholder { /* Firefox 19+ */
+          opacity: 0.5;
+        }
+        &:-ms-input-placeholder { /* IE 10+ */
+          opacity: 0.5;
+        }
+        &:-moz-placeholder { /* Firefox 18- */
+          opacity: 0.5;
+        }
+      }
+    }
+    .add-question {
+
+
+      button {
+        padding: 0;
+        display: flex;
+        align-items: center;
+        text-transform: none;
+        font-size: 16px;
+        line-height: 20px;
+        i {
+          font-size: 16px;
+          margin-right: 16px;
+        }
+        margin-bottom: 18px;
+
+      }
+      label {
+        margin: 0 0;
+        padding: 0;
+      }
+      .comment {
+        display: flex;
+        p {
+          margin: 0 0 0 15px;
+          padding: 0;
+          font-family: Source Sans Pro, sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 21px;
+          color: #707683;
+          span {
+            display: block;
+            font-size: 13px;
+            line-height: 17px;
+          }
+        }
+      }
+    }
+    .item-controls {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 14px;
+      button {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 18px;
+        padding: 11px 18px;
+
+        &:first-of-type {
+          margin-right: 28px;
+        }
+      }
     }
   }
-  }
 
-
-quill-editor::ng-deep {
-  .ql-toolbar {
-    background: #fff;
-    // border-radius: 3px 3px 0px 0px;
-    border: none;
-  }
-  .ql-container {
-    border: none;
-    padding: 20px 24px;
-    // border-radius: 0px 0px 3px 3px;
-    & > * {
+  quill-editor::ng-deep {
+    .ql-toolbar {
+      background: #fff;
+      // border-radius: 3px 3px 0px 0px;
+      border: none;
+    }
+    .ql-container {
+      border: none;
+      padding: 20px 24px;
+      // border-radius: 0px 0px 3px 3px;
+      & > * {
+        font-family: Source Sans Pro, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #33596e;
+        padding: 0;
+      }
+    }
+    .ql-editor.ql-blank::before {
       font-family: Source Sans Pro, sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
       line-height: 20px;
       color: #33596e;
-      padding: 0;
+      opacity: 0.5;
+      left: 24px;
     }
   }
-  .ql-editor.ql-blank::before {
-    font-family: Source Sans Pro, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    color: #33596e;
-    opacity: 0.5;
-    left: 24px;
-  }
-}
 
+  // -----------------buttons ----------------------//
 
-// -----------------buttons ----------------------//
+  .form-butons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    button {
+      font-family: Source Sans Pro, sans-serif;
+      border: none;
+      border-radius: 4px;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 18px;
+      // color: #4285F4;
+      padding: 15px 24px;
+      cursor: pointer;
+      text-transform: uppercase;
+      &:first-of-type {
+        border: 1px solid #4285f4;
+        background: #fff;
+        color: #4285f4;
+        box-shadow: none;
+        &:hover {
+          color: #fff;
+          background: #3c7eea;
+          box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+        }
+      }
 
-.form-butons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  button {
-    font-family: Source Sans Pro, sans-serif;
-    border: none;
-    border-radius: 4px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
-    // color: #4285F4;
-    padding: 15px 24px;
-    cursor: pointer;
-    text-transform: uppercase;
-    &:first-of-type {
-      border: 1px solid #4285f4;
-      background: #fff;
-      color: #4285f4;
-      box-shadow: none;
+      color: #fff;
+      background: #3c7eea;
+      box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
       &:hover {
-        color: #fff;
-        background: #3c7eea;
-        box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+        border: 1px solid #4285f4;
+        background: #fff;
+        color: #4285f4;
+        box-shadow: none;
       }
     }
-
-    color: #fff;
-    background: #3c7eea;
-    box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
-    &:hover {
-      border: 1px solid #4285f4;
-      background: #fff;
-      color: #4285f4;
-      box-shadow: none;
-    }
   }
-}
 
-// --------------------- popover ------------------
+  // --------------------- popover ------------------
 
-ngb-popover-window {
-  &.popover {
-    background: #ffffff;
-    box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
-    border-radius: 8px;
-    padding: 18px 23px 19px 28px;
-    left: 14px !important;
-    top: -30px !important;
-    z-index: 2;
-    max-width: 323px;
-
-    &:before {
-      content: "";
-      position: absolute;
-      left: -9px;
-      top: 8px;
-      width: 22px;
-      height: 22px;
+  ngb-popover-window {
+    &.popover {
       background: #ffffff;
-      -webkit-transform: rotate(47deg);
-      transform: rotate(47deg);
-      box-sizing: border-box;
-      z-index: -1;
-    }
+      box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
+      border-radius: 8px;
+      padding: 18px 23px 19px 28px;
+      left: 14px !important;
+      top: -30px !important;
+      z-index: 2;
+      max-width: 323px;
 
-    h3 {
-      font-family: "Source Sans Pro", sans-serif;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 18px;
-      color: #000000;
-      margin: 0 0 12px;
-    }
+      &:before {
+        content: "";
+        position: absolute;
+        left: -9px;
+        top: 8px;
+        width: 22px;
+        height: 22px;
+        background: #ffffff;
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+        box-sizing: border-box;
+        z-index: -1;
+      }
 
-    .popover-body {
-      margin: 0;
-      font-family: "Source Sans Pro", sans-serif;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 18px;
-      color: #707683;
+      h3 {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #000000;
+        margin: 0 0 12px;
+      }
+
+      .popover-body {
+        margin: 0;
+        font-family: "Source Sans Pro", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        color: #707683;
+      }
     }
   }
-}
 }
