--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
@@ -96,6 +96,7 @@
         font-weight: normal;
         font-size: 14px;
         line-height: 18px;
+        background-color: #fff;
       }
       &:hover {
         &:before {
