--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -452,6 +452,10 @@
     &:nth-child(odd) {
       background-color: #fbfcfd;
     }
+    &.sub{
+      padding-left: 80px;
+      padding-right: 60px;
+    }
   }
 }
 
